Update download link to v2.0.0

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 	  
 	  <p class="lead text-muted">BTS-CE is a production ready network management platform that leverages the best and latest technologies.</p>
 	  <p>
-		<a href="https://github.com/bodastage/bts-ce/releases/download/v2.0.0-rc8/bts-ce-v2.0.0-rc8.zip" target="_blank" class="btn btn-primary my-2">Download BTS-CE </a>
+		<a href="https://github.com/bodastage/bts-ce/releases/download/v2.0.0/bts-ce-v2.0.0.zip" target="_blank" class="btn btn-primary my-2">Download BTS-CE v2.0.0</a>
 		<a href="http://demo.bodastage.org" class="btn btn-secondary my-2">Demo</a>
 	  </p>
 	</div>
